# snaplab

./: .gitignore  README.md  build.py  diag.py  pyproject.toml  requirements.txt  run.bat  snaplab_launch.py
.claude/: settings.local.json
assets/: README.md
installer/: snaplab.iss
src/snaplab/: __init__.py  __main__.py  app.py  autostart.py  hotkeys.py  paths.py  settings.py  tray.py
src/snaplab/capture/: area.py  fullscreen.py  screen.py  scroll.py  window.py
src/snaplab/editor/: canvas.py  window.py
src/snaplab/features/: banner.py  color_picker.py  delay.py  history.py  ocr.py  pin.py
src/snaplab/ui/: hotkey_edit.py  settings_window.py
src/snaplab/utils/: clipboard.py  image.py
